--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "version": "0.0.1",
   "galleryBanner": {
-    "color": "#6bffa6",
+    "color": "#0d0126",
     "theme": "dark"
   },
   "pricing": "Free",
